--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-dependencies:2.1.8.RELEASE'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -82,14 +82,4 @@ jar {
 				'Main-Class': mainClass
 		)
 	}
-}
-
-task sourcesJar(type: Jar) {
-	getArchiveClassifier().set('sources')
-	from(sourceSets.main.allJava)
-}
-
-task javadocJar(type: Jar) {
-	getArchiveClassifier().set('javadoc')
-	from(javadoc.destinationDir)
 }
