--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//remove annoying warning
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
 wrapper {
