--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=${java.io.tmpdir}
